--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tesseract.js Demo</title>
+    <title>Extract text from image</title>
+    <script src="/dist/tesseract.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,81 +18,269 @@
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            text-align: center;
         }
         h1 {
             color: #333;
-            margin-bottom: 20px;
-        }
-        .demo-link {
-            display: inline-block;
-            background-color: #4CAF50;
-            color: white;
-            padding: 15px 30px;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 18px;
-            margin: 20px 0;
-            transition: background-color 0.3s;
-        }
-        .demo-link:hover {
-            background-color: #45a049;
-        }
-        .description {
-            color: #666;
-            line-height: 1.6;
+            text-align: center;
             margin-bottom: 30px;
         }
-        .features {
-            text-align: left;
-            margin: 30px 0;
-        }
-        .features h3 {
-            color: #333;
+        h3 {
+            color: #444;
             margin-bottom: 15px;
         }
-        .features ul {
-            list-style-type: none;
-            padding: 0;
+        .upload-section {
+            text-align: center;
+            margin-bottom: 30px;
+            padding: 20px;
+            border: 2px dashed #ddd;
+            border-radius: 8px;
+            background-color: #fafafa;
         }
-        .features li {
-            padding: 8px 0;
-            border-bottom: 1px solid #eee;
+        .file-input {
+            margin: 15px 0;
         }
-        .features li:before {
-            content: "✓ ";
-            color: #4CAF50;
-            font-weight: bold;
-            margin-right: 10px;
+        .preview-section {
+            display: none;
+            margin-bottom: 20px;
+        }
+        #imagePreview {
+            max-width: 100%;
+            max-height: 300px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        .result-section {
+            display: none;
+            margin-top: 20px;
+        }
+        #resultText {
+            width: 100%;
+            height: 200px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-family: monospace;
+            resize: vertical;
+        }
+        .loading {
+            display: none;
+            text-align: center;
+            color: #666;
+            margin: 20px 0;
+        }
+        .progress-bar {
+            width: 100%;
+            height: 20px;
+            background-color: #f0f0f0;
+            border-radius: 10px;
+            margin: 10px 0;
+            overflow: hidden;
+        }
+        .progress {
+            height: 100%;
+            background-color: #4CAF50;
+            width: 0%;
+            transition: width 0.3s ease;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        button:disabled {
+            background-color: #cccccc;
+            cursor: not-allowed;
+        }
+        .error {
+            color: #d32f2f;
+            background-color: #ffebee;
+            padding: 10px;
+            border-radius: 4px;
+            margin: 10px 0;
+            display: none;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Tesseract.js OCR Демо</h1>
-        
-        <div class="description">
-            <p>Демонстрация работы библиотеки Tesseract.js для распознавания текста с изображений прямо в браузере.</p>
+<div class="container">
+    <h1>Extract text from image</h1>
+
+    <div class="upload-section">
+        <h3>Upload an image to recognize text</h3>
+        <input type="file" id="fileInput" class="file-input" accept="image/*">
+        <p>Supported formats: PNG, JPG, JPEG, BMP, GIF</p>
+    </div>
+
+    <div class="loading" id="loading">
+        <div class="progress-bar">
+            <div class="progress" id="progress"></div>
         </div>
+        <p id="status">Initializing OCR...</p>
+    </div>
 
-        <a href="ocr-demo.html" class="demo-link">Запустить OCR Демо</a>
+    <div class="error" id="error"></div>
 
-        <div class="features">
-            <h3>Возможности демо:</h3>
-            <ul>
-                <li>Распознавание текста с изображений в форматах PNG, JPG, JPEG, BMP, GIF</li>
-                <li>Поддержка русского и английского языков</li>
-                <li>Предпросмотр загруженного изображения</li>
-                <li>Отображение прогресса распознавания</li>
-                <li>Копирование распознанного текста в буфер обмена</li>
-                <li>Адаптивный интерфейс</li>
-            </ul>
-        </div>
+    <div class="preview-section" id="previewSection">
+        <h3>Image Preview:</h3>
+        <img id="imagePreview" alt="Preview of uploaded image">
+    </div>
 
-        <div class="description">
-            <p><strong>Технологии:</strong> Tesseract.js, HTML5, CSS3, JavaScript</p>
-            <p><em>Для работы требуется запущенный сервер разработки (npm start)</em></p>
+    <div class="result-section" id="resultSection">
+        <h3>Recognized Text:</h3>
+        <textarea id="resultText" readonly placeholder="Recognized text will appear here..."></textarea>
+        <div style="margin-top: 10px;">
+            <button onclick="copyToClipboard()">Copy Text</button>
+            <button onclick="clearAll()" style="background-color: #f44336; margin-left: 10px;">Clear All</button>
         </div>
     </div>
+</div>
+
+<script>
+  let worker = null;
+  let isProcessing = false;
+
+  // Инициализация Tesseract worker
+  async function initializeWorker() {
+    try {
+      worker = await Tesseract.createWorker("eng", 1, {
+        workerPath: "/dist/worker.min.js",
+        corePath: "/public/core",
+        //langPath: "https://tessdata.projectnaptha.com/4.0.0_fast",
+        logger: function(m) {
+          updateProgress(m);
+        }
+      });
+      console.log("Tesseract worker initialized");
+    } catch (error) {
+      console.error("Ошибка инициализации Tesseract:", error);
+      showError("Failed to initialize OCR engine: " + error.message);
+    }
+  }
+
+  // Обновление прогресса
+  function updateProgress(message) {
+    const statusElement = document.getElementById('status');
+    const progressElement = document.getElementById('progress');
+
+    if (message.status === 'recognizing text') {
+      const progress = Math.round(message.progress * 100);
+      progressElement.style.width = progress + '%';
+      statusElement.textContent = `Recognizing text: ${progress}%`;
+    } else if (message.status === 'loading tesseract core') {
+      statusElement.textContent = 'Loading Tesseract core...';
+    } else if (message.status === 'initializing tesseract') {
+      statusElement.textContent = 'Initializing Tesseract...';
+    } else if (message.status === 'loading language traineddata') {
+      statusElement.textContent = 'Loading language data...';
+    }
+  }
+
+  // Показать ошибку
+  function showError(message) {
+    const errorElement = document.getElementById('error');
+    errorElement.textContent = message;
+    errorElement.style.display = 'block';
+  }
+
+  // Скрыть ошибку
+  function hideError() {
+    document.getElementById('error').style.display = 'none';
+  }
+
+  // File upload handling
+  document.getElementById('fileInput').addEventListener('change', async function(event) {
+    const file = event.target.files[0];
+    if (!file) return;
+
+    if (isProcessing) {
+      alert("Please wait for the current processing to complete");
+      return;
+    }
+
+    // File type validation
+    if (!file.type.startsWith('image/')) {
+      showError("Please select an image file");
+      return;
+    }
+
+    hideError();
+    isProcessing = true;
+
+    // Show preview
+    const previewSection = document.getElementById('previewSection');
+    const imagePreview = document.getElementById('imagePreview');
+    const url = URL.createObjectURL(file);
+    imagePreview.src = url;
+    previewSection.style.display = 'block';
+
+    // Hide previous results
+    document.getElementById('resultSection').style.display = 'none';
+
+    // Show loading
+    document.getElementById('loading').style.display = 'block';
+    document.getElementById('progress').style.width = '0%';
+
+    try {
+      // Initialize worker if not created yet
+      if (!worker) {
+        await initializeWorker();
+      }
+
+      // Recognize text
+      const result = await worker.recognize(file);
+
+      // Show result
+      document.getElementById('resultText').value = result.data.text;
+      document.getElementById('resultSection').style.display = 'block';
+
+      console.log("Recognition completed:", result.data);
+
+    } catch (error) {
+      console.error("Recognition error:", error);
+      showError("Error recognizing text: " + error.message);
+    } finally {
+      // Hide loading
+      document.getElementById('loading').style.display = 'none';
+      isProcessing = false;
+      URL.revokeObjectURL(url);
+    }
+  });
+
+  // Copy text to clipboard
+  function copyToClipboard() {
+    const textarea = document.getElementById('resultText');
+    textarea.select();
+    document.execCommand('copy');
+    alert("Text copied to clipboard!");
+  }
+
+  // Clear all
+  function clearAll() {
+    document.getElementById('fileInput').value = '';
+    document.getElementById('previewSection').style.display = 'none';
+    document.getElementById('resultSection').style.display = 'none';
+    document.getElementById('resultText').value = '';
+    document.getElementById('loading').style.display = 'none';
+    hideError();
+    isProcessing = false;
+  }
+
+  // Initialize on page load
+  window.addEventListener('load', function() {
+    console.log("Page loaded, initializing Tesseract...");
+  });
+
+  // Cleanup worker on page close
+  window.addEventListener('beforeunload', async function() {
+    if (worker) {
+      await worker.terminate();
+      console.log("Tesseract worker terminated");
+    }
+  });
+</script>
 </body>
 </html>
