--- a/index.html
+++ b/index.html
@@ -282,5 +282,14 @@
     }
   });
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NVWHRZCT86"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NVWHRZCT86');
+</script>
 </body>
 </html>
